Registrar el M1 de S152: condiciones 1 y 2 de O-instalación cumplidas y excepción de Higiene/Método a R-apertura
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>